updated data for today and todo list

--- a/todo
+++ b/todo
@@ -16,3 +16,6 @@ Then:
 - Make search bar WORK
 - make nav-bar work when browser is zoomed in
 - make sure everything's accessible (tags)
+
+*** note: the WSJ and the WSJ & Gimlet are categorized differently
+also neither stuff should be categorized
