--- a/todo
+++ b/todo
@@ -19,3 +19,6 @@ Then:
 
 *** note: the WSJ and the WSJ & Gimlet are categorized differently
 also neither stuff should be categorized
+
+Also...
+  - find out how many days each podcast has been in the top 50 since my start date. Possibly put in tables.
